--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -1,3 +1,9 @@
 /* Your styles go here */
+
 @import url("bootstrap/dist/css/bootstrap.min.css");
 @import url("bootstrap-icons/font/bootstrap-icons.css");
+.jumbotron {
+    background: url(https://images.unsplash.com/photo-1574970324184-746b18c8bd49?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
+    background-position: 0 -250px;
+    background-size: cover;
+}
